usr/src/uts/common/io/sata/adapters/ahci/ahci.c
@@ -2664,7 +2664,7 @@ ahci_tran_abort(dev_info_t *dip, sata_pkt_t *spkt, int flag)
 	 * perform a COMRESET.
 	 */
 	(void) ahci_restart_port_wait_till_ready(ahci_ctlp,
-	    ahci_portp, port, NULL, NULL);
+	    ahci_portp, port, 0, NULL);
 
 	/*
 	 * Compute which have finished and which need to be retried.
@@ -6266,7 +6266,7 @@ ahci_alloc_rcvd_fis(ahci_ctl_t *ahci_ctlp, ahci_port_t *ahci_portp)
 	    NULL,
 	    (caddr_t *)&ahci_portp->ahciport_rcvd_fis,
 	    &ret_len,
-	    &ahci_portp->ahciport_rcvd_fis_acc_handle) != NULL) {
+	    &ahci_portp->ahciport_rcvd_fis_acc_handle) != 0) {
 
 		AHCIDBG(AHCIDBG_INIT, ahci_ctlp,
 		    "rcvd FIS dma mem alloc fail", NULL);
@@ -6358,7 +6358,7 @@ ahci_alloc_cmd_list(ahci_ctl_t *ahci_ctlp, ahci_port_t *ahci_portp)
 	    NULL,
 	    (caddr_t *)&ahci_portp->ahciport_cmd_list,
 	    &ret_len,
-	    &ahci_portp->ahciport_cmd_list_acc_handle) != NULL) {
+	    &ahci_portp->ahciport_cmd_list_acc_handle) != 0) {
 
 		AHCIDBG(AHCIDBG_INIT, ahci_ctlp,
 		    "cmd list dma mem alloc fail", NULL);
@@ -6475,8 +6475,7 @@ ahci_alloc_cmd_tables(ahci_ctl_t *ahci_ctlp, ahci_port_t *ahci_portp)
 		    NULL,
 		    (caddr_t *)&ahci_portp->ahciport_cmd_tables[slot],
 		    &ret_len,
-		    &ahci_portp->ahciport_cmd_tables_acc_handle[slot]) !=
-		    NULL) {
+		    &ahci_portp->ahciport_cmd_tables_acc_handle[slot]) != 0) {
 
 			AHCIDBG(AHCIDBG_INIT, ahci_ctlp,
 			    "cmd table dma mem alloc fail", NULL);
